Fixed PCI module

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,18 +1,19 @@
 {
     "clienttab": "PCI Devices",
-    "current_speed": "Current Speed",
-    "devices": "PCI Devices",
-    "sppci_device_type": "Device Type",
-    "name": "Device Name",
-    "noPCI": "No PCI Devices",
+    "device_id": "Device ID",
+    "name": "Name",
+    "device_name": "Device Name",
+    "no_pci": "No PCI Devices",
     "reporttitle": "PCI Report",
-    "PCI": "PCI",
-    "sppci_driver_installed": "Driver Installed",
-    "sppci_link-speed": "Link Speed",
-    "sppci_link-width": "Link Width",
-    "sppci_msi": "MSI",
-    "sppci_pause-compatible": "Pause Compatible",
-    "vendor": "Vendor",
-    "sppci_name": "PCI Name",
+    "pci": "PCI",
+    "driver_installed": "Driver Installed",
+    "device_type": "Device Type",
+    "link_speed": "Link Speed",
+    "link_width": "Link Width",
+    "revision_id": "Revision ID",
+    "slot_name": "Slot",
+    "subsystem_id": "Subsystem ID",
+    "subsystem_vendor_id": "Subsystem Vendor ID",
+    "vendor_id": "Vendor ID",
     "report": "PCI Report"
 }
